# Introduction-to-Image-Understanding-2

./: README.md
app/: CMakeLists.txt  image_box_filter.cpp  image_transformer.cpp
include/ceng391/: image.hpp
src/: image.cpp
